--- a/signup-styles.css
+++ b/signup-styles.css
@@ -63,6 +63,10 @@ a {
     background-color: #f44336;
 }
 
+.alert.warning {
+    background-color: #ff9800;
+}
+
 .closebtn {
     margin-left: 15px;
     color: white;
